# visaocomp_volei

./: pyproject.toml
meu-ambiente/: pyvenv.cfg
meu-ambiente/Scripts/: activate  activate.bat
quadra/: README.md  main.py  roi.py
src/visaocomp_volei/: __init__.py  main.py  utils.py
vagas/: README.md  main.py  roi.py
