[project]
name = "visaocomp-volei"
version = "0.1.0"
description = "Meu projeto Python xyz"
readme = "README.md"
authors = [
    { name = "thalia", email = "thaliaaxavier2022@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[project.scripts]
visaocomp_volei = "visaocomp_volei:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
